--- a/crop_rotator/strona/templates/strona/step_parts/substep.html
+++ b/crop_rotator/strona/templates/strona/step_parts/substep.html
@@ -6,7 +6,7 @@
     {{ translatables.middle_crop }}
     {% else %}
     {{ translatables.late_crop }}
-    {% endif %}: <button class="btn btn-link-3 btn-dark" name="remove_substep" substep_id="substep.id"></h4>
+    {% endif %}: <button class="btn btn-link-3 btn-dark" name="remove_substep_button" substep_id="substep.id"></h4>
 
 {% for crop in substep.crop_substep.all %}
 {% if not crop.is_crop_mix %}
@@ -18,7 +18,7 @@
   <p class="slave0" value="test_slave0"><select class="selectables" name="crop_select">
     <option value ="None" selected disabled>{{ translatables.option_select }}:</option>
     {% for crop in croplist %}
-      {% if crop not in substep.crup_substep.all and not crop.is_crop_mix %}
+      {% if crop not in substep.crop_substep.all and not crop.is_crop_mix %}
       <option value="{{ crop.id }}">{{ crop.name }}</option>
       {% endif %}
     {% endfor %}
