--- a/crop_rotator/strona/templates/strona/step.html
+++ b/crop_rotator/strona/templates/strona/step.html
@@ -43,7 +43,7 @@
                     {{ translatables.middle_crop }}
                     {% else %}
                     {{ translatables.late_crop }}
-                    {% endif %}<button>
+                    {% endif %}</button>
                 {% endif %}
               {% endfor %}
               <input type="hidden" id="inter_key" name="inter_key" value=""/>
