--- a/crop_rotator/strona/templates/strona/plan.html
+++ b/crop_rotator/strona/templates/strona/plan.html
@@ -99,7 +99,7 @@
               <div class="row master0" value="1782">
                 <div class="col-md-9" value="254">
                   <p class="slave0" value="test_slave0">{{ translatables.switch_text }}: <select class="selectables" name="step_selection">
-                    <option value ="None" selected disabled>{{ translatables.option_select }}:</option>
+                    <option name="None" value ="None" selected disabled>{{ translatables.option_select }}:</option>
                     {% for step2 in steps %}
                       {% if step2 != step %}
                         <option name="{{ step2.id }}" value ="{{ step2.order }}">{{ step2.title }}</option>
