--- a/crop_rotator/strona/templates/strona/plan_parts/crop_properties.html
+++ b/crop_rotator/strona/templates/strona/plan_parts/crop_properties.html
@@ -44,7 +44,7 @@
     {% include 'strona/plan_parts/deep_properties.html' %}
   {% endif %}
 
-  {% if not crop.family.is_family_slave and crop.family.family_master == None %}<p><b><a href="{% url 'crop' crop.id %}">{{ crop.name }}</a>  </b><button class="show_properties2" value="2">Info</button></p>
+  {% if not crop.is_crop_mix %}<p><b><a href="{% url 'crop' crop.id %}">{{ crop.name }}</a>  </b><button class="show_properties2" value="2">Info</button></p>
   <div class="hidden_properties">
   <p>{{ translatables.family }}: <a href="{% url 'family' crop.family.id %}">{% if crop.family.is_family_slave %} {{ crop.family.family_master }} {% else %}{{ crop.family }}{% endif %}</a></p>
     {% if crop.descr %}
