--- a/crop_rotator/strona/templates/strona/plan.html
+++ b/crop_rotator/strona/templates/strona/plan.html
@@ -137,6 +137,10 @@
                 {% else %}
                   <h2>{{ translatables.late_crop }}:</h2>
                 {% endif %}
+                {% fertilizerlookup substep=substep as fertilizer_lookup %}
+                {% if fertilizer_lookup %}
+                $ DODANO OBORNIK
+                {% endif %}
                 {% if substep.crop_substep.all %}
                 {% for crop in substep.crop_substep.all %}
                   {% include 'strona/plan_parts/plan_step.html' %}
