--- a/crop_rotator/strona/templates/strona/about.html
+++ b/crop_rotator/strona/templates/strona/about.html
@@ -26,23 +26,20 @@
         </div>
         <div class="col-md-8">
         <p class="lead text-muted">{{ about_us.about_project|linebreaksbr }}</p>
+        {% if user.is_authenticated %}
+        <div class="row featurette">
+          <div class="col-md">
+            <a href="mailto:jakub.kozdrowicz@gmail.com" class="btn btn-secondary my-3">{{ about_us.send_email }}</a>
+          </div>
+          <div class="col-md">
+          <a href="https://github.com/Bahusson/crop_rotator" class="btn btn-primary my-3">{{ about_us.github }}</a>
+          </div>
+        </div>
+        {% else %}
+          <a href="{% url 'logger' %}" class="btn btn-secondary my-3">{{ about_us.login_to_see }}</a>
+        {% endif %}
         </div>
       </div>
-      {% if user.is_authenticated %}
-      <div class="row featurette">
-        <div class="col-md-4">
-          <a href="mailto:jakub.kozdrowicz@gmail.com" class="btn btn-secondary my-3">{{ about_us.send_email }}</a>
-        </div>
-        <div class="col-md-4">
-        <a href="{{ items.gitter_link }}" class="btn btn-primary my-3">{{ about_us.gitter }}</a>
-        </div>
-        <div class="col-md-4">
-          <a href="{{ items.git_link }}" class="btn btn-secondary my-3">{{ about_us.github }}</a>
-        </div>
-      </div>
-      {% else %}
-        <a href="{% url 'logger' %}" class="btn btn-secondary my-3">{{ about_us.login_to_see }}</a>
-      {% endif %}
     </div>
   </section>
 </main>
