Dodano zielony nawóz

--- a/crop_rotator/core/templates/core/admin_db_superpowers.html
+++ b/crop_rotator/core/templates/core/admin_db_superpowers.html
@@ -29,7 +29,7 @@
               <p><button class="btn btn-link-3 btn-dark" name="purge_tag_db" type="submit">$Usuń TAGI!</button></p>
               <p><button class="btn btn-link-3 btn-light" name="create_meta_tag_db" type="submit">$Utwórz meta TAGÓW!</button></p>
               <p><button class="btn btn-link-3 btn-light" name="create_all_signatures_db" type="submit">$Utwórz sygnatury!</button></p>
-              <p><button class="btn btn-link-3 btn-dark" name="purge_all_db" type="submit">$USUŃ WSZYSTKO!</button></p>
+              <!--<p><button class="btn btn-link-3 btn-dark" name="purge_all_db" type="submit">$USUŃ WSZYSTKO!</button></p>-->
             </form>
         </div>
         </div>
