--- a/crop_rotator/strona/templates/strona/home.html
+++ b/crop_rotator/strona/templates/strona/home.html
@@ -30,9 +30,9 @@
 </div>
 <!-- BUTTON -->
 
-<button type="button" class="btn btn-light btn-sm float-right linkname2">
-     <a href="{% url 'allplans' %}" >{{ items.see_more }} >>> </a>
-</button>
+<a href="{% url 'allplans' %}" ><button type="button" class="btn btn-light btn-sm float-right">
+     <b>{{ items.see_more }} >>></b>
+</button></a>
 
 <!--KONIEC BUTTONA -->
 <!-- KONIEC AKTUALNOŚCI -->
