--- a/crop_rotator/strona/templates/strona/crop_parts/crop_interaction_from.html
+++ b/crop_rotator/strona/templates/strona/crop_parts/crop_interaction_from.html
@@ -1,4 +1,4 @@
-{% if interaction.1.is_positive %} {{ translatables.well_cooperates }} {% else %} {{ translatables.harms }} {% endif %}
+{% if interaction.1.interaction_sign == 2 %} {{ translatables.well_cooperates }} {% elif interaction.1.interaction_sign == 1 %} {{ translatables.harms }} {% endif %}
   {% if interaction.1.about_crop %}{% include "strona/crop_parts/condition_cropmix_1.html" %}
 <b>{{ interaction.1.about_crop.name }}</b></a>
   {% elif interaction.1.about_family %}<a href="{% url 'family' interaction.1.about_family.id %}"><b>{{ interaction.1.about_family.name }}</b></a>
