--- a/crop_rotator/strona/templates/strona/crop_parts/interaction_to.html
+++ b/crop_rotator/strona/templates/strona/crop_parts/interaction_to.html
@@ -2,6 +2,6 @@
       {% include "strona/crop_parts/condition_cropmix.html" %}
       {% elif interaction.0.get_cname == "CropFamily" %}<a href="{% url 'family' interaction.0.id %}">
       {% elif interaction.0.get_cname == "CropTag" %}<a href="{% url 'tag' interaction.0.id %}">{% endif %}
-  {{ interaction.0.name }}</a></b> {% if interaction.1.is_positive %} {{ translatables.well_cooperates }} {% else %} {{ translatables.harms }} {% endif %}
+  {{ interaction.0.name }}</a></b> {% if interaction.1.interaction_sign == 2 %} {{ translatables.well_cooperates }} {% elif interaction.1.interaction_sign == 1 %} {{ translatables.harms }} {% endif %}
   {% if interaction.2 == "crop" %} {{ crop.name }} {% elif interaction.2 == "family" %} {% if crop.family.is_family_slave %}{{ crop.family.family_master.name }}
   {% else %}{{ crop.family.name }} {% endif %} {% else %} <a href="{% url 'tag' interaction.3.id %}"><b>{{ interaction.3.name }}</b></a> {% endif %}
