update sortowanie po korzeniach i wymaganiach pokarmowych

--- a/crop_rotator/strona/templates/strona/crop_parts/interaction_button.html
+++ b/crop_rotator/strona/templates/strona/crop_parts/interaction_button.html
@@ -13,6 +13,8 @@
  {{ translatables.two_consecutive }}
  {% elif interaction.1.type_of_interaction == 6 %}
  {{ translatables.next_year }}
+ {% elif interaction.1.type_of_interaction == 7 %}
+ {{ translatables.second_third }}
 {% endif %}
 {% if interaction.1.season_of_interaction == 1 %}
  {{ translatables.annual }}
